# behave-gcp-test-automation

./: .gitignore  README.md  config.py  example.config  pyproject.toml
data/fixed/: sample_load.csv  sample_load.sql
features/: bigquery.feature  composer_dag.feature  environment.py  extract_and_load_flow.feature  storage.feature
features/steps/: bigquery_steps.py  bigquery_steps_check_table.py  bigquery_steps_data_insertion.py  bigquery_steps_delete.py  bigquery_steps_routine.py  dag_steps.py  storage_steps.py
